# MVPs

./: .gitignore  README.md
intent-browser/: DECISIONS.md  README.md  background.js  content.css  popup.html  popup.js
mon/: README.md  __init__.py  __main__.py  capture.py  config.py  goals.example.txt  llm.py  loop.py  memory.py  research.py  tts.py  vision.py
option-chain-db/: example.py  option_chain_db.py
shiller-crash-analysis/: ANALYSIS.md  DECISIONS.md  IPO_ADJUSTMENT.md  README.md  pyproject.toml
shiller-crash-analysis/data/: macro_events.csv  private_ai_companies.csv  shiller_clean.csv  sp500_holder_stakes.csv
shiller-crash-analysis/output/: episodes_cape_ge_25.csv  episodes_cape_ge_30.csv  event_momentum_by_category.csv  event_momentum_directional.csv  event_momentum_per_event.csv  ipo_scenarios.csv  ipo_summary.json  mechanism_counts.json  private_ai_with_stakes.csv  quarterly_revenue_iran_us.csv  quarterly_revenue_iran_us_sectors.csv  summary_stats.csv
shiller-crash-analysis/scripts/: analyze.py  charts.py  download_data.py  event_momentum.py  ipo_adjustment.py  parse_shiller.py  quarterly_revenue_iran_us.py  spx_options.py
your-browser/: README.md  content.js  manifest.json
