[project]
name = "shiller-crash-analysis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "xlrd>=2.0.2",
    "yfinance>=1.3.0",
]
